--- a/signup.html
+++ b/signup.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="navbar-brand">
             <a href="index.html">
-                <img src="assets/logo.svg" alt="FurEver Home" class="logo">
+                <img src="assets/logo.png" alt="FurEver Home" class="logo">
             </a>
         </div>
         <ul class="navbar-links">
@@ -83,14 +83,14 @@
         </div>
         
         <div class="auth-image">
-            <img src="assets/auth-pets.jpg" alt="Happy pets">
+            <img src="assets/auth-pets1.jpg" alt="Happy pets">
         </div>
     </div>
 
     <footer>
         <div class="footer-content container">
             <div class="footer-section about">
-                <img src="assets/logo-white.svg" alt="FurEver" class="footer-logo">
+                <img src="assets/logo_white.png" alt="FurEver" class="footer-logo">
                 <p>Connecting loving homes with pets in need since 2020.</p>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
