--- a/tips.html
+++ b/tips.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="navbar-brand">
             <a href="index.html">
-                <img src="assets/logo.svg" alt="FurEver Home" class="logo">
+                <img src="assets/logo.png" alt="FurEver Home" class="logo">
             </a>
         </div>
         <ul class="navbar-links">
@@ -67,7 +67,7 @@
             </div>
             
             <div class="tip-card" data-category="training">
-                <img src="assets/tip2.jpg" alt="Dog Training" class="tip-image">
+                <img src="assets/tip2.png" alt="Dog Training" class="tip-image">
                 <div class="tip-content">
                     <h3>Basic Obedience Training for Dogs</h3>
                     <div class="tip-meta">
@@ -136,7 +136,7 @@
     <footer>
         <div class="footer-content container">
             <div class="footer-section about">
-                <img src="assets/logo-white.svg" alt="FurEver" class="footer-logo">
+                <img src="assets/logo_white.png" alt="FurEver" class="footer-logo">
                 <p>Connecting loving homes with pets in need since 2020.</p>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
