--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="navbar-brand">
             <a href="index.html">
-                <img src="assets/logo.svg" alt="FurEver Home" class="logo">
+                <img src="assets/logo.png" alt="FurEver Home" class="logo">
             </a>
         </div>
         <ul class="navbar-links">
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="about-image">
-            <img src="assets/about-pets.jpg" alt="Happy pets">
+            <img src="assets/who_we_are2.jpg" alt="Who we are">
         </div>
     </section>
 
@@ -79,7 +79,7 @@
     <footer>
         <div class="footer-content container">
             <div class="footer-section about">
-                <img src="assets/logo-white.svg" alt="FurEver" class="footer-logo">
+                <img src="assets/logo_white.png" alt="FurEver" class="footer-logo">
                 <p>Connecting loving homes with pets in need since 2020.</p>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
