--- a/shared.html
+++ b/shared.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="navbar-brand">
             <a href="index.html">
-                <img src="assets/logo.svg" alt="FurEver Home" class="logo">
+                <img src="assets/logo.png" alt="FurEver Home" class="logo">
             </a>
         </div>
         <ul class="navbar-links">
