--- a/adopt.html
+++ b/adopt.html
@@ -59,7 +59,7 @@
         <div class="pets-grid">
             <div class="pet-card" data-category="dog">
                 <div class="pet-image-container">
-                    <img src="assets/Toffy.jpg" alt="Toffy Golden Retriever" class="pet-image">
+                    <img src="..assets/Toffy.jpg" alt="Toffy Golden Retriever" class="pet-image">
                     <div class="pet-badge">Available</div>
                 </div>
                 <div class="pet-info">
@@ -78,7 +78,7 @@
             
             <div class="pet-card" data-category="cat">
                 <div class="pet-image-container">
-                    <img src="assets/Lili.jpg" alt="Lili Siberian Cat" class="pet-image">
+                    <img src="..assets/Lili.jpg" alt="Lili Siberian Cat" class="pet-image">
                     <div class="pet-badge">Available</div>
                 </div>
                 <div class="pet-info">
@@ -97,7 +97,7 @@
             
             <div class="pet-card" data-category="bird">
                 <div class="pet-image-container">
-                    <img src="assets/Coco.jpg" alt="Coco Parrot" class="pet-image">
+                    <img src="..assets/Coco.jpg" alt="Coco Parrot" class="pet-image">
                     <div class="pet-badge">Available</div>
                 </div>
                 <div class="pet-info">
