--- a/signup.html
+++ b/signup.html
@@ -24,8 +24,7 @@
             <li><a href="contact.html" class="nav-link">CONTACT</a></li>
         </ul>
         <div class="navbar-auth">
-            <a href="signup.html" class="auth-btn signup-btn">SIGN UP</a>
-            <a href="login.html" class="auth-btn login-btn">LOGIN</a>
+            <!-- Will be populated by account.js -->
         </div>
         <div class="mobile-menu-btn">
             <i class="fas fa-bars"></i>
@@ -129,6 +128,7 @@
         </div>
     </footer>
 
+    <script src="js/account.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
