--- a/profile.html
+++ b/profile.html
@@ -93,11 +93,10 @@
             <div class="footer-section about">
                 <img src="assets/logo_white.png" alt="FurEver" class="footer-logo">
                 <p>Connecting loving homes with pets in need since 2020.</p>
-                <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                 <div class="social-icons">
+                    <a href="facebook.com"><i class="fab fa-facebook-f"></i></a>
+                    <a href="instagram.com"><i class="fab fa-instagram"></i></a>
+                    <a href="youtube.com"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-section links">
