--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
                 <img src="assets/logo_white.png" alt="FurEver" class="footer-logo">
                 <p>Connecting loving homes with pets in need since 2020.</p>
                 <div class="social-icons">
-                    <a href="facebook.com"><i class="fab fa-facebook-f"></i></a>
-                    <a href="instagram.com"><i class="fab fa-instagram"></i></a>
-                    <a href="youtube.com"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="footer-section links">
