--- a/contact.html
+++ b/contact.html
@@ -90,10 +90,9 @@
             
             <h3>Follow Us</h3>
             <div class="social-links">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/watch?v=Rht8rS4cR1s"><i class="fab fa-youtube"></i></a>
             </div>
         </div>
         
