--- a/tips.html
+++ b/tips.html
@@ -169,7 +169,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 FurEver. All rights reserved | <a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
+            <p>&copy; 2025 FurEver. All rights reserved | <a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-of-use.html">Terms of Use</a></p>
         </div>
     </footer>
 
